--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "element-tree-grid": "^0.1.3",
     "element-ui": "^2.5.4",
     "vue": "^2.5.2",
     "vue-quill-editor": "^3.0.6",
